# CurveProjector

./: CMakeLists.txt
.github/workflows/: cmake.yml
ConsoleApp/: CMakeLists.txt
ConsoleApp/include/: ConsoleApp.hpp  Context.hpp  Parser.hpp  PointParser.hpp  PolylineFile.hpp  PolylineGateway.hpp  ProjectionParser.hpp
ConsoleApp/src/: ConsoleApp.cpp  Context.cpp  Parser.cpp  PointParser.cpp  PolylineFile.cpp  ProjectionParser.cpp  main.cpp
Kernel/: CMakeLists.txt  CurveProjector.cpp  CurveProjector.h
Kernel/include/: ApproxDouble.hpp  Point.hpp  Polyline.hpp  Projector.hpp  Segment.hpp  Vector.hpp
Kernel/src/: ApproxDouble.cpp  Point.cpp  Polyline.cpp  Projector.cpp  Segment.cpp  Vector.cpp
KernelTests/: CMakeLists.txt  PolylineTests.cpp  SegmentTests.cpp  TaskRequirements.cpp
